finalize for publication

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400&display=swap"
             rel="stylesheet"
         />
-        <title>Polchert webpage</title>
+        <title>Mario Polchert webpage</title>
     </head>
     <body>
         <video
@@ -34,7 +34,11 @@
             </h2>
         </header>
         <picture>
-            <img id="myPicture" src="./images/Bucko.jpg" alt="Mario Polchert" />
+            <img
+                id="myPicture"
+                src="./images/mariopolchert.png"
+                alt="Mario Polchert"
+            />
         </picture>
         <section class="en">
             My name is
@@ -43,7 +47,7 @@
                 Mario Polchert
             </span>
             <br />
-            I'm a Web Developer
+            I'm a Web Developer/Designer
             <br />
             I do HTML, CSS, JavaScript
             <br />
@@ -61,7 +65,7 @@
                 Mario Polchert
             </span>
             <br />
-            Ja sam Web Developer
+            Ja sam Web Developer/Designer
             <br />
             Radim s HTML-om, CSS-om, JavaScript-om
             <br />
