new favicon, miner @media corrections

--- a/index.html
+++ b/index.html
@@ -3,11 +3,29 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link
+        <!-- <link
             rel="shortcut icon"
             href="images/favicon.ico"
             type="image/x-icon"
+        /> -->
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="images/apple-touch-icon.png"
         />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="images/favicon-32x32.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="images/favicon-16x16.png"
+        />
+        <link rel="manifest" href="/images/site.webmanifest" />
         <link rel="stylesheet" href="style.css" />
         <link
             href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400&display=swap"
@@ -16,14 +34,7 @@
         <title>Mario Polchert webpage</title>
     </head>
     <body>
-        <video
-            autoplay
-            loop
-            src="./videos/Nyc.mp4"
-            type="video/mp4"
-            id="bVideo"
-            muted
-        ></video>
+        <video autoplay loop src="./videos/Nyc.mp4" id="bVideo" muted></video>
         <header>
             <h2 id="lang" class="lang">HRV</h2>
             <h2 class="emph en">
