--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     src="./images/iconfinder_47-skype_104456.svg"
                 />
             </a>
-            <a href="mailto:mario@polchert.com">
+            <a href="mailto:mario@mariopolchert.com">
                 <img
                     id="mailme"
                     class="linkImage"
