--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
         </script>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+        <meta name="description" content="Mario Polchert personal page" />
+        <meta
+            name="keywords"
+            content="Web Developer Design Creator Wordpress WP Personal"
+        />
+        <meta name="author" content="Mario Polchert" />
         <link
             rel="apple-touch-icon"
             sizes="180x180"
